--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  background-image: url(https://rukminim2.flixcart.com/image/850/1000/l1tmf0w0/poster/3/u/g/small-poster-bts-music-music-wallpaper-series-1-wall-poster-300-original-imagdazeedxrvwqt.jpeg?q=90);
 }
 
 #content {
